2006-12-15  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS, configure.ac (AC_INIT):
	Version 1.3.9 released.

	* Makefile.am (MOSTLYCLEANFILES): Add _match.i.
	* configure.ac (for an assembler syntax supported by this package):
	Remove _match.i.

	* bootstrap (gnulib_tool_options_extras): New var.
	(gnulib_tool_options): Use it.
	* bootstrap.conf (gnulib_tool_options_extras): Avoid getline and
	rpmatch.  gzip doesn't need them, since it doesn't ENABLE_NLS.

2006-12-13  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Use $CPPFLAGS everywhere $CPP is used, and use
	$CPPFLAGS $CFLAGS everywhere $CC is used.
	* lib/Makefile.am (match.$(OBJEXT)): Likewise.
	* configure.ac: Test the exit code of the $CPP and $ASCPPPOST commands
	separately.

2006-12-11  Paul Eggert  <eggert@cs.ucla.edu>

	* configure.ac (ASCPPPOST): Simplify to use just 'sed'.
	* lib/Makefile.am (match.$(OBJEXT)): Check for CPP failure.

2006-12-11  Bruno Haible  <bruno@clisp.org>

	Cross-compilation support.
	* configure.ac (ASCPP): Remove substituted variable.
	(ASCPPPOST, ASCPPFLAGS): New substituted variables.
	* lib/Makefile.am (ASCPP, LN_S): Remove unnecessary macro definitions.
	(match.$(OBJEXT)): Use CPP, ASCPPFLAGS, ASCPPPOST instead of ASCPP.
	* configure.ac: Add test for chown function.
	* gzip.c (treat_file) [!HAVE_CHOWN]: Don't call chown.
	* gzip.c: Include "timespec.h".  This doesn't fix any bugs, but
	it is clearer.

2006-12-11  Paul Eggert  <eggert@cs.ucla.edu>

	The SSIZE_MAX fix didn't work on NSK, so fix it in a more-reliable
	(albeit more-complicated) way.  Problem reported by Matthew Woehlke.
	* gzip.h (read_buffer): New decl.
	* unlzw.c (unlzw): Use read_buffer rather than read.
	* zip.c (file_read): Likewise.
	* util.c (copy, fill_inbuf): Likewise.
	(read_buffer, write_buffer): New functions.
	(write_buf): Use write_buffer rather than write.

	Undo the previous SSIZE_MAX-related change; it didn't work.
	* gzip.c: Include <limits.h>.
	* util.c: Likewise.